# OpSys

./: .gitignore  Cargo.toml  Makefile  README.md  limine.conf  linker.ld
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: main.rs  panic.rs
kernel/src/ai/: gguf.rs  mod.rs  ops.rs  runtime.rs  tensor.rs
kernel/src/arch/x86_64/: boot.rs  cpu.rs  gdt.rs  idt.rs  interrupts.rs  mod.rs  serial.rs
kernel/src/cap/: capability.rs  cspace.rs  mod.rs  object.rs  rights.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/framebuffer/: font.rs  mod.rs
kernel/src/drivers/pci/: mod.rs
kernel/src/drivers/virtio/: mod.rs
kernel/src/fs/: devfs.rs  mod.rs  tmpfs.rs  vfs.rs
kernel/src/gui/: desktop.rs  keyboard.rs  mod.rs  mouse.rs  painter.rs  widgets.rs  window.rs
kernel/src/ipc/: endpoint.rs  message.rs  mod.rs  notification.rs
kernel/src/loader/: elf.rs
kernel/src/mm/: address.rs  frame.rs  heap.rs  mod.rs  pmm.rs  vmm.rs
kernel/src/net/: dns.rs  interface.rs  ip.rs  mod.rs  udp.rs
kernel/src/proc/: context_switch.rs  mod.rs  process.rs  scheduler.rs  thread.rs
kernel/src/security/: cpu_protection.rs  mod.rs  wxe.rs
kernel/src/syscall/: handlers.rs  mod.rs  table.rs
lib/opsys-api/: Cargo.toml
lib/opsys-api/src/: error.rs  lib.rs  syscall.rs
lib/opsys-rt/: Cargo.toml
lib/opsys-rt/src/: io.rs  lib.rs  syscall.rs
tools/: make-usb.sh  record-demo.sh
tools/qemu-runner/: run.sh
