[package]
name = "opsys-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
opsys-api           = { workspace = true }
limine              = "0.6"
x86_64              = "0.15"
spin                = { workspace = true }
bitflags            = { workspace = true }
log                 = { workspace = true }
linked_list_allocator = "0.10"
pic8259                 = "0.11"
libm                    = "0.2"
opsys-rt             = { workspace = true }
